Added the beginning of routing

--- a/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
+++ b/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
@@ -24,4 +24,11 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\Wallet\BaseWalletView.axaml.cs">
+      <DependentUpon>BaseWalletView.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
 </Project>
