Added in ability to check for wallets

--- a/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
+++ b/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
@@ -31,4 +31,8 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MonkeyWallet.Core\MonkeyWallet.Core.csproj" />
+  </ItemGroup>
 </Project>
