show and enter mnemonic

--- a/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
+++ b/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
@@ -26,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MonkeyWallet.Core\MonkeyWallet.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Views\Wallet\BaseWalletView.axaml.cs">
       <DependentUpon>BaseWalletView.axaml</DependentUpon>
       <SubType>Code</SubType>
