Getting start on receive fund

--- a/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
+++ b/MonkeyWallet.Desktop/MonkeyWallet.Desktop.csproj
@@ -39,4 +39,8 @@
   <ItemGroup>
     <ProjectReference Include="..\MonkeyWallet.Core\MonkeyWallet.Core.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Wallet\ReceiveFunds\" />
+  </ItemGroup>
 </Project>
